--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,10 @@ body {
 }
 
 figure > img {
-    border-top-left-radius: 10px ;
-    border-top-right-radius: 10px;
+    border-radius: 10px 10px 0 0;
     width: 100%;
     height:130px;
-
+    object-fit: cover;
 }
 
 .title {
@@ -53,4 +52,36 @@ figure > img {
     padding: 7px 0px 0px 10px;
     font-size: 12px;
     color: rgb(152, 145, 145);
+}
+
+.header_container {
+    height: 90px;
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    gap: 10px;
+}
+
+.header_container input {
+    height: 30px;
+    border: solid 1px rgba(0, 0, 0, 0.209);
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.header_container button {
+    height: 30px;
+    width: 56px;
+    border-radius: 10px;
+    background-color: rgba(16, 155, 241, 0.871);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.header_container button:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+
 }
