--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,11 @@ body {
     
 }
 .card {
-    
     list-style: none;
-    height: 240px;
+    height: 270px;
     width: 220px;
     margin: 8px;
-    position: relative;
+    /* position: relative; */
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.6) 0px 10px 20px, rgba(0, 0, 0, 0.4) 0px 6px 6px;
     display: inline-block;
@@ -32,7 +31,7 @@ body {
 figure > img {
     border-radius: 10px 10px 0 0;
     width: 100%;
-    height:130px;
+    height:180px;
     object-fit: cover;
 }
 
