--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
     height: 270px;
     width: 220px;
     margin: 8px;
-    /* position: relative; */
+    position: relative;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.6) 0px 10px 20px, rgba(0, 0, 0, 0.4) 0px 6px 6px;
     display: inline-block;
@@ -44,6 +44,7 @@ figure > img {
     gap: .5;
 }
 .title > h2 {
+    text-align: center;
     padding: 7px 0px 5px 10px;
     font-size: 18px;
 }
@@ -51,6 +52,34 @@ figure > img {
     padding: 7px 0px 0px 10px;
     font-size: 12px;
     color: rgb(152, 145, 145);
+}
+
+.data_adicional {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0,0,0,0.79);
+    color: aliceblue;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.card:hover .data_adicional {
+    display: block;
+    animation: identifier 1s ease-in-out forwards; 
+}
+
+@keyframes identifier {
+    from {
+        opacity: 0;
+        transform: translateX(120px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
 .header_container {
